desktop/assets/css/mobile.css
#bar_bottom.mobile_bar_bottom {
  height: 23%;
  z-index: 420;
}

.mobile_chatControl {
  width: 64px;
  height: 64px;
  font-size: 64px !important;
}

.mobile_show_desktop_img {
  width: 16vw !important;
}

.mobile_larger_font {
  font-size: 32px !important;
}

.mobile_larger_icons {
  width: 128px !important;;
  height: 128px !important;;
}

.mobile_dock_bar {
  position: absolute;
  bottom: 0px;
}

.mobile_datetime {
  font-size: 11px;
  font-decoration: italic;
}

